[tool.poetry]
name = "gophient"
version = "1.1.0"
description = "Client library for the Gopherspace"
authors = ["Arisu W. <arisuchr@riseup.net>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.16.1"
pylint = "^2.14.5"
portray = "^1.7.0"
pytest = "^7.1.2"

[[tool.portray.mkdocs.nav]]
Home = "README.md"

[[tool.portray.mkdocs.nav]]
    [[tool.portray.mkdocs.nav."Quick Start"]]
    "1. Installation" = "docs/quick_start/1_-_Installation.md"

    [[tool.portray.mkdocs.nav."Quick Start"]]
    "2. API" = "docs/quick_start/2_-_API.md"

[tool.portray.mkdocs.theme]
name = "material"
palette = {primary = "green", accent = "orange"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
